--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ description: >
 authors:
   - Adaptant Labs <labs@adaptant.io>
 homepage: https://github.com/adaptant-labs/lipsum-dart
-
+environment:
+  sdk: '>=2.0.0 <3.0.0'
 dev_dependencies:
   test: any
