updated dart3 version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,5 +7,8 @@ authors:
 homepage: https://github.com/adaptant-labs/lipsum-dart
 environment:
   sdk: ">=3.0.0 <4.0.0"
+
+dependencies:
+  very_good_analysis: ^5.0.0+1
 dev_dependencies:
   test: any
